--- a/bbb.html
+++ b/bbb.html
@@ -27,8 +27,8 @@
 
 	<script type="module">
 		import * as THREE from './build/three.module.js';
-//		import { DeviceOrientationControls } from './jsm/controls/DeviceOrientationControls.js';
-		import { TrackballControls } from './jsm/controls/TrackballControls.js';
+		import { DeviceOrientationControls } from './jsm/controls/DeviceOrientationControls.js';
+//		import { TrackballControls } from './jsm/controls/TrackballControls.js';
 //		import { OrbitControls } from './jsm/controls/OrbitControls.js';
 		import { PositionalAudioHelper } from './jsm/helpers/PositionalAudioHelper.js';
 		import { GLTFLoader } from './jsm/loaders/GLTFLoader.js';
@@ -53,7 +53,7 @@
 			camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.1, 100 );
 			camera.position.set( 0, 1, 5 );
 
-//			controls = new DeviceOrientationControls( camera );
+			controls = new DeviceOrientationControls( camera );
 
 			var reflectionCube = new THREE.CubeTextureLoader()
 				.setPath( 'textures/cube/SwedishRoyalCastle/' )
@@ -159,8 +159,8 @@
 			container.appendChild( renderer.domElement );
 
 
-			controls = new TrackballControls( camera, renderer.domElement );
-			controls.rotateSpeed = 4;
+//			controls = new TrackballControls( camera, renderer.domElement );
+//			controls.rotateSpeed = 4;
 
 //			var controls = new OrbitControls( camera, renderer.domElement );
 //			controls.target.set( 0, 0.1, 0 );
